fixed about page blur on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,7 @@ main {
     padding: 2rem;
     border-radius: 2rem;
     backdrop-filter: blur(1rem);
+    --webkit-backdrop-filter: blur(1rem);
     color: var(--white);
     position: fixed;
     bottom: 2rem;
